<?xml version="1.0"?>
<package>
  <name>ensenso</name>
  <version>0.1.0</version>
  <description>The ensenso package</description>

  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/crigroup/ensenso</url>
  <url type="bugtracker">https://github.com/crigroup/ensenso/issues</url>
  <url type="repository">https://github.com/crigroup/ensenso</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  