<?xml version="1.0"?>
<package>
  <name>ensenso</name>
  <version>0.1.0</version>
  <description>The ensenso package</description>

  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/crigroup/ensenso</url>
  <url type="bugtracker">https://github.com/crigroup/ensenso/issues</url>
  <url type="repository">https://github.com/crigroup/ensenso</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_ms